Finish sso config!

--- a/files/twemproxyd.ini
+++ b/files/twemproxyd.ini
@@ -1,6 +1,6 @@
 [Twemproxy]
 name = twemproxyd
-host = <%= @hostname %>
+host = 10.4.133.40 
 port = 46379
 stats_port = 22222
 check_master_interval = 90
@@ -10,3 +10,4 @@ redis = masterA, masterB, masterC, masterD
 [Logging]
 # logging file
 config_file = local_twemproxyd_logging_base.cfg
+
