--- a/files/sentineld.ini
+++ b/files/sentineld.ini
@@ -1,11 +1,11 @@
 [sentineld]
 name = sentineld
-host = <%= @hostname %>
+host = 10.4.133.40
 port = 26379
 
 [masters]
    [[masterA]]
-    host = sso-redis1
+    host = 10.4.133.40
     port = 36379
     level = 2
     down_after_ms = 10000
@@ -15,7 +15,7 @@ port = 26379
     notification_script = redis_down_notification.py
 
    [[masterB]]
-    host = sso-redis1
+    host = 10.4.133.40
     port = 36381
     level = 2
     down_after_ms = 10000
@@ -25,7 +25,7 @@ port = 26379
     notification_script = redis_down_notification.py
 
    [[masterC]]
-    host = sso-redis2
+    host = 10.190.73.170
     port = 36383
     level = 2
     down_after_ms = 10000
@@ -35,7 +35,7 @@ port = 26379
     notification_script = redis_down_notification.py
 
    [[masterD]]
-    host = sso-redis2
+    host = 10.190.73.170
     port = 36385
     level = 2
     down_after_ms = 10000
@@ -45,7 +45,7 @@ port = 26379
     notification_script = redis_down_notification.py
 
    [[masterE]]
-    host = sso-redis1
+    host = 10.4.133.40
     port = 6379
     level = 2
     down_after_ms = 10000
@@ -55,7 +55,7 @@ port = 26379
     notification_script = redis_down_notification.py
 
    [[masterF]]
-    host = sso-redis1
+    host = 10.4.133.40
     port = 6381
     level = 2
     down_after_ms = 10000
@@ -65,7 +65,7 @@ port = 26379
     notification_script = redis_down_notification.py
 
    [[masterG]]
-    host = sso-redis1
+    host = 10.4.133.40
     port = 6383
     level = 2
     down_after_ms = 10000
@@ -73,7 +73,8 @@ port = 26379
     can_failover = yes
     parallel_syncs = 1
     notification_script = redis_down_notification.py
-
 [Logging]
 # logging file
 config_file = local_sentineld_logging_base.cfg
+
+
