Change master host - the apache sevice cannot start now.

--- a/modules/oak/files/puppet.conf
+++ b/modules/oak/files/puppet.conf
@@ -7,7 +7,7 @@ factpath=/lib/facter
 templatedir=/templates
 prerun_command=/etc/puppet/etckeeper-commit-pre
 postrun_command=/etc/puppet/etckeeper-commit-post
-server=puppet-master.localdomain
+server=fred-master.lan.happylatte.com
 pluginsync=true
 
 [master]
