--- a/puppet.conf
+++ b/puppet.conf
@@ -4,7 +4,7 @@ vardir=/var/lib/puppet
 ssldir=/var/lib/puppet/ssl
 rundir=/var/run/puppet
 factpath=$vardir/lib/facter
-server=puppet-master.localdomain
+server=fred-master.lan.happylatte.com
 pluginsync=true
 
 [master]
