--- a/modules/munin/files/apache.munin.conf
+++ b/modules/munin/files/apache.munin.conf
@@ -1,33 +1,13 @@
-Alias /munin /var/cache/munin/www
-<Directory /var/cache/munin/www>
-        Order allow,deny
-        Allow from all
-        Options None
-
-  # This file can be used as a .htaccess file, or a part of your apache
-  # config file.
-  #
-  # For the .htaccess file option to work the munin www directory
-  # (/var/cache/munin/www) must have "AllowOverride all" or something
-  # close to that set.
-  #
-
-  AuthUserFile /etc/munin/munin-htpasswd
-  AuthName "Munin"
-  AuthType Basic
-  require valid-user
-
-  # This next part requires mod_expires to be enabled.
-  #
-
-  # Set the default expiration time for files to 5 minutes 10 seconds from
-  # their creation (modification) time.  There are probably new files by
-  # that time.
-  #
-
-    <IfModule mod_expires.c>
-        ExpiresActive On
-      ExpiresDefault M310
-    </IfModule>
-
-</Directory>
+<VirtualHost *:80>
+  Alias /munin /var/cache/munin/www
+  <Directory /var/cache/munin/www>
+    Options Indexes FollowSymLinks MultiViews
+    AllowOverride None
+    Require all granted
+    
+    AuthType Basic
+    AuthName "Munin"
+    AuthUserFile /etc/munin/munin-htpasswd
+    require valid-user
+  </Directory>
+</VirtualHost>
